[package]
name = "whale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bluer = { version="0.15.7", features=["full"] }
chrono = "0.4.23"
futures = "0.3.26"
tokio = { version="1.25.0", features=["full"] }
dbus = { version="0.9.7", path="./dbus-rs/dbus", features = ["vendored"] }
uuid = "1.3.0"

[patch.crates-io]
libdbus-sys = { path = "./dbus-rs/libdbus-sys" }
